<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".BusItemAcitivity">

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:background="@drawable/bottom_line_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@color/default_color"
                android:clickable="true"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_back_undo_left_navigation" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_context"
        android:background="@drawable/bottom_line_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_back">

        <TextView
            android:id="@+id/tv_info_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bottom_line_layout"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_context">

        <TextView
            android:id="@+id/tv_startStation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:gravity="end" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_both_arrows"/>

        <TextView
            android:id="@+id/tv_endStation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:gravity="start" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_number">

        <LinearLayout
            android:id="@+id/ll_image"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/iv_busType"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_info_index"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/ll_image">

            <LinearLayout
                android:id="@+id/ll_info_region"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/info_region"
                    android:gravity="start" />
                <TextView
                    android:id="@+id/tv_info_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="20sp"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_info_type"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/info_bustype"
                    android:gravity="start" />
                <TextView
                    android:id="@+id/tv_info_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="20sp"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_info_first"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/info_first"
                    android:gravity="start" />
                <TextView
                    android:id="@+id/tv_info_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="20sp"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_info_last"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/info_last"
                    android:gravity="start" />
                <TextView
                    android:id="@+id/tv_info_last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="20sp"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_info_company"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/info_company"
                    android:gravity="start" />
                <TextView
                    android:id="@+id/tv_info_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="20sp"
                    android:gravity="end" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_info_tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_info">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="노선도" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="지도" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_info_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_info_tab" />
</androidx.constraintlayout.widget.ConstraintLayout>